added href link to email

--- a/views/includes/joinus_sections/contactBox.ejs
+++ b/views/includes/joinus_sections/contactBox.ejs
@@ -12,7 +12,7 @@
                             Don't see your state logo?
                             <br>
                             <br>
-                            <a href="#contact_form">Let us know</a> you are interested in starting, or registering for, a league
+                            <a href="mailto:info@gdlsoccer.com?subject=Im Interested&body=I am inquiring about a new league in (insert town).">Let us know</a> you are interested in starting, or registering for, a league
                             near you. Thanks and we look forward to seeing you back out on the field!
                         </p>
                     </div>
