changed to just MA and CT

--- a/views/includes/general/navbar.ejs
+++ b/views/includes/general/navbar.ejs
@@ -2,17 +2,13 @@
     <li><a href="/leagues">GDL HOME</a></li>
     <li class="divider"></li>
     <li><a href="/leagues/MA">GDL MA</a></li>
-    <li><a href="/leagues/NH">GDL NH</a></li>
-    <li><a href="/leagues/RI">GDL RI</a></li>
-    <li><a href="/leagues/ME">GDL ME</a></li>
+    <li><a href="/leagues/CT">GDL CT</a></li>
 </ul>
 <ul id="dropdown2" class="dropdown-content">
     <li><a href="/leagues">GDL HOME</a></li>
     <li class="divider"></li>
     <li><a href="/leagues/MA">GDL MA</a></li>
-    <li><a href="/leagues/NH">GDL NH</a></li>
-    <li><a href="/leagues/RI">GDL RI</a></li>
-    <li><a href="/leagues/ME">GDL ME</a></li>
+    <li><a href="/leagues/CT">GDL CT</a></li>
 </ul>
 
 <nav>
