--- a/views/includes/leaguelanding_sections/join.ejs
+++ b/views/includes/leaguelanding_sections/join.ejs
@@ -7,21 +7,21 @@
         Please click on your state below for more information on the league near you
     </p>
     <div class="row">
-        <div class="league col s12 m6 l3">
-            <img class="leaguesLogo" src="/images/leagues/MA.png">
+        <div class="league col s12 m4">
+            <img class="leaguesLogo" src="/images/leagues/logo-draft.png">
             <h5 class="green-text bold">GDL MA</h5>
         </div>
-        <div class="league col s12 m6 l3">
-            <img class="leaguesLogo" src="/images/leagues/RI.png">
-            <h5 class="red-text bold">GDL RI</h5>
-        </div>
-        <div class="league col s12 m6 l3">
-            <img class="leaguesLogo" src="/images/leagues/NH.png">
-            <h5 class="orange-text bold">GDL NH</h5>
-        </div>
-        <div class="league col s12 m6 l3">
-            <img class="leaguesLogo" src="/images/leagues/ME.png">
-            <h5 class="blue-text bold">GDL ME</h5>
+        <div class="towns col s12 m8" style="margin-top: 50px;">
+            <table>
+                <tr>
+                    <td class="bold">Massachusetts</td>
+                    <td class="bold">Connecticut</td>
+                </tr>
+                <tr>
+                    <td>Marlborough, Taunton, Weston, Weymouth, Woburn, Newton, Ludlow and Byfield</td>
+                    <td>Rocky Hill, Windsor, North Branford, Trumbull and Groton </td>
+                </tr>
+            </table>
         </div>
     </div>
 </div>
