--- a/views/leagueLanding.ejs
+++ b/views/leagueLanding.ejs
@@ -31,7 +31,7 @@
     <%- include('includes/leaguelanding_sections/when'); %>
 
     <!-- Team -->
-    <%- include('includes/leaguelanding_sections/team'); %>
+    <!-- <%- include('includes/leaguelanding_sections/team'); %> -->
 
     <!-- Join -->
     <%- include('includes/leaguelanding_sections/join'); %>
