--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -851,13 +851,7 @@ div.mapContainer {
 }
 
 .joinUsInfo .where img {
-    height: 500px;
-}
-
-@media only screen and (max-width: 400px) {
-    .joinUsInfo .where img {
-        height: 250px;
-    }
+    width: 100%;
 }
 
 .joinUsInfo .where {
