--- a/views/includes/joinus_sections/contactForm.ejs
+++ b/views/includes/joinus_sections/contactForm.ejs
@@ -79,7 +79,8 @@
               <p>League interested in:  </p>
             </div>
             <div class="col s6">
-              <p>
+              <% if (league == 'MA' || league == 'Regular') { %>
+                <p>
                   <label>
                     <input name="group2" type="radio" value="Marlborough" checked />
                     <span>Marlborough</span>
@@ -127,6 +128,8 @@
                     <span>Byfield</span>
                   </label>
                 </p>
+              <% } %>
+              <% if(league == 'CT' || league == 'Regular') {%>
                 <p>
                   <label>
                     <input name="group2" type="radio" value="Rocky Hill"/>
@@ -157,6 +160,7 @@
                     <span>Groton</span>
                   </label>
                 </p>
+              <% } %>
             </div>
         </div>
         <div class="row button">
