--- a/views/includes/homepage_sections/ourLeagues.ejs
+++ b/views/includes/homepage_sections/ourLeagues.ejs
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="league col s12 m4">
                 <img class="leaguesLogo" src="/images/leagues/logo-draft.png">
-                <h5 class="green-text bold">GDL MA</h5>
+                <h5 class="green-text bold">GDL</h5>
             </div>
             <div class="towns col s12 m8" style="margin-top: 50px;">
                 <table>
