small mobile fixes

--- a/views/includes/general/navbar.ejs
+++ b/views/includes/general/navbar.ejs
@@ -16,7 +16,7 @@
         <ul class="main center hide-on-small-only">
             <div class="first">
                 <li><a href="/">Home</a></li>
-                <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Programs<i class="material-icons right">arrow_drop_down</i></a></li>
+                <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Programs<i style="width: 12px;" class="material-icons right">arrow_drop_down</i></a></li>
                 <li><a href="/franchise">Franchise</a></li>
             </div>
             <a href="/" class="no-hover"><img class="logo" src="/images/leagues/MA.png"></a>
