--- a/views/includes/franchise_sections/activeFranchises.ejs
+++ b/views/includes/franchise_sections/activeFranchises.ejs
@@ -4,7 +4,7 @@
     </div>
     <div class="mapContainer">
         <div class="map">
-            <img src="/images/Mass.png" alt="" class="map">
+            <img src="/images/MA.png" alt="" class="map">
         </div>
         <div class="legend">
             <p class="bold">Availability</p>
