--- a/views/includes/general/head.ejs
+++ b/views/includes/general/head.ejs
@@ -1,4 +1,12 @@
 <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9419YK72S9"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-9419YK72S9');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
