--- a/views/includes/general/head.ejs
+++ b/views/includes/general/head.ejs
@@ -6,6 +6,8 @@
         gtag('js', new Date());
 
         gtag('config', 'G-9419YK72S9');
+        ga('send', 'pageview', location.pathname);
+
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
