--- a/views/includes/general/head.ejs
+++ b/views/includes/general/head.ejs
@@ -6,7 +6,7 @@
         gtag('js', new Date());
 
         gtag('config', 'G-9419YK72S9');
-        ga('send', 'pageview', location.pathname);
+        gtag('send', 'pageview', location.pathname);
 
     </script>
     <meta charset="UTF-8">
