changed hello to pathname

--- a/views/includes/general/head.ejs
+++ b/views/includes/general/head.ejs
@@ -6,7 +6,7 @@
         gtag('js', new Date());
 
         gtag('config', 'G-9419YK72S9', {
-            'page_title' : 'hello',
+            'page_title' : location.pathname,
             'page_path': location.pathname
         });
 
