--- a/views/includes/franchise_sections/header.ejs
+++ b/views/includes/franchise_sections/header.ejs
@@ -6,7 +6,7 @@
                 <p class="grey-text text-darken-2">
                     Do you want to... 
                     <br><br>
-                    -Make a difference AND own a succeseful business?<br>
+                    -Make a difference AND own a successful business?<br>
                     -Work for yourself?<br>
                     -Blend your passion with your career?
                     <br><br>
