--- a/views/includes/joinus_sections/included.ejs
+++ b/views/includes/joinus_sections/included.ejs
@@ -4,37 +4,37 @@
     <div class="row">
         <div class="col s12 l4">
             <div class="include valign-wrapper tapinRed">
-                Multiple 2 Festivals, 4 Games
+                2 GDL Festivals
             </div>
         </div>
         <div class="col s12 l4">
             <div class="include valign-wrapper tapinRed">
-                Unique, Digital Player Cards
+                4v4 small sided games (per US Soccer Guidelines)
             </div>
         </div>
         <div class="col s12 l4">
             <div class="include valign-wrapper tapinRed">
-                Developmental Feedback 
+                Conditioned and uncoditioned play 
             </div>
         </div>
         <div class="col s12 l4">
             <div class="include valign-wrapper tapinYellow">
-                Fields
+                Facilities
             </div>
         </div>
         <div class="col s12 l4">
             <div class="include valign-wrapper tapinYellow">
-                Referees and Site Staff
+                Referees and site staff
             </div>
         </div>
         <div class="col s12 l4">
             <div class="include valign-wrapper tapinYellow">
-                Full Insurance Coverage
+                Full insurance coverage
             </div>
         </div>
         <div class="col s12">
             <div class="include valign-wrapper tapinBlue">
-                Complimentary Training Plans
+                Unique, personalized digital player cards displaying develpmentally appropiate coaching feedback!
             </div>
         </div>
     </div>
