--- a/views/includes/leaguelanding_sections/cost.ejs
+++ b/views/includes/leaguelanding_sections/cost.ejs
@@ -2,6 +2,6 @@
     <h3 class="bold">What's the Cost?</h3>
     <hr>
     <p class="info">
-        $170 Per Player, Per Season
+        $240 per team (NECSL) and $300 per team (non-NECSL)
     </p>
 </div>
