--- a/views/includes/leaguelanding_sections/header.ejs
+++ b/views/includes/leaguelanding_sections/header.ejs
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col s12 l4 content">
-                <h3 class="white-text">GDL <span>Leagues</span></h3>
+                <h3 class="white-text">GDL <span>Programs</span></h3>
             </div>
             <div class="col s8 image hide-on-med-and-down">
                 <img class="program" src="/images/leagues/MA.png">
