hyperlinked to MA and CT

--- a/views/includes/joinus_sections/leagues.ejs
+++ b/views/includes/joinus_sections/leagues.ejs
@@ -7,8 +7,8 @@
         <div class="towns col s12 m8" style="margin-top: 50px;">
             <table>
                 <tr>
-                    <td class="bold">Massachusetts</td>
-                    <td class="bold">Connecticut</td>
+                    <a href="gdlsoccer.com/leagues/MA"><td class="bold">Massachusetts</td></a>
+                    <a href="gdlsoccer.com/leagues/CT"><td class="bold">Connecticut</td></a>
                 </tr>
                 <tr>
                     <td>Marlborough, Taunton, Weston, Weymouth, Woburn, Newton, Ludlow and Byfield</td>
