got rid of contact box

--- a/views/joinUs.ejs
+++ b/views/joinUs.ejs
@@ -23,7 +23,7 @@
 
     <%- include('includes/joinus_sections/leagues'); %>
 
-    <%- include('includes/joinus_sections/contactBox'); %>
+    <!-- <%- include('includes/joinus_sections/contactBox'); %> -->
 
     <%- include('includes/aboutus_sections/download'); %>
 
