fixed hyperlink error

--- a/views/includes/joinus_sections/leagues.ejs
+++ b/views/includes/joinus_sections/leagues.ejs
@@ -7,8 +7,9 @@
         <div class="towns col s12 m8" style="margin-top: 50px;">
             <table>
                 <tr>
-                    <a href="gdlsoccer.com/leagues/MA"><td class="bold">Massachusetts</td></a>
-                    <a href="gdlsoccer.com/leagues/CT"><td class="bold">Connecticut</td></a>
+                    
+                    <td class="bold"><a href="gdlsoccer.com/leagues/MA">Massachusetts</a></td>
+                    <td class="bold"><a href="gdlsoccer.com/leagues/CT">Connecticut</a></td>
                 </tr>
                 <tr>
                     <td>Marlborough, Taunton, Weston, Weymouth, Woburn, Newton, Ludlow and Byfield</td>
