--- a/views/includes/joinus_sections/leagues.ejs
+++ b/views/includes/joinus_sections/leagues.ejs
@@ -8,8 +8,8 @@
             <table>
                 <tr>
                     
-                    <td class="bold"><a href="gdlsoccer.com/leagues/MA">Massachusetts</a></td>
-                    <td class="bold"><a href="gdlsoccer.com/leagues/CT">Connecticut</a></td>
+                    <td class="bold"><a href="/leagues/MA">Massachusetts</a></td>
+                    <td class="bold"><a href="/leagues/CT">Connecticut</a></td>
                 </tr>
                 <tr>
                     <td>Marlborough, Taunton, Weston, Weymouth, Woburn, Newton, Ludlow and Byfield</td>
