changed image for complimentary programs

--- a/views/includes/homepage_sections/ourProgram.ejs
+++ b/views/includes/homepage_sections/ourProgram.ejs
@@ -27,7 +27,7 @@
             }); %>
             <%- include('../minis/ourProgramCard', {
                 title: "Complimentary Program",
-                image: "circlePeople",
+                image: "comp",
                 info: "Supplemental, Convenient, Low Cost and Commitment"
             }); %>
             <%- include('../minis/ourProgramCard', {
