added bridgewater to list of towns

--- a/views/includes/homepage_sections/ourLeagues.ejs
+++ b/views/includes/homepage_sections/ourLeagues.ejs
@@ -13,7 +13,7 @@
                         <td class="bold">Connecticut</td>
                     </tr>
                     <tr>
-                        <td>Marlborough, Taunton, Weston, Weymouth, Woburn, Newton, Ludlow, Southborough, and Byfield</td>
+                        <td>Marlborough, Taunton, Weston, Weymouth, Woburn, Newton, Ludlow, Southborough, Bridgewater, and Byfield</td>
                         <td>Rocky Hill, Windsor, North Branford, Trumbull and Groton </td>
                     </tr>
                 </table>
