--- a/views/includes/joinus_sections/leagues.ejs
+++ b/views/includes/joinus_sections/leagues.ejs
@@ -12,7 +12,7 @@
                     <td class="bold"><a href="/leagues/CT">Connecticut</a></td>
                 </tr>
                 <tr>
-                    <td>Marlborough, Taunton, Weston, Weymouth, Woburn, Newton, Ludlow, Southborough and Byfield</td>
+                    <td>Marlborough, Taunton, Weston, Weymouth, Woburn, Newton, Ludlow, Southborough, Bridgewater and Byfield</td>
                     <td>Rocky Hill, Windsor, North Branford, Trumbull and Groton </td>
                 </tr>
             </table>
