removed contact box from league landing pages

--- a/views/leagueLanding.ejs
+++ b/views/leagueLanding.ejs
@@ -37,7 +37,7 @@
     <%- include('includes/leaguelanding_sections/join'); %>
 
     <!-- Contact Box -->
-    <%- include('includes/joinus_sections/contactBox'); %>
+    <!-- <%- include('includes/joinus_sections/contactBox'); %> -->
 
     <!-- Banner -->
     <%- include('includes/leaguelanding_sections/banner'); %>
