updated towns in league landing section

--- a/views/includes/leaguelanding_sections/join.ejs
+++ b/views/includes/leaguelanding_sections/join.ejs
@@ -18,7 +18,7 @@
                     <td class="bold">Connecticut</td>
                 </tr>
                 <tr>
-                    <td>Marlborough, Taunton, Weston, Weymouth, Woburn, Newton, Ludlow and Byfield</td>
+                    <td>Marlborough, Taunton, Weston, Weymouth, Woburn, Newton, Ludlow, Southborough, Bridgewater and Byfield</td>
                     <td>Rocky Hill, Windsor, North Branford, Trumbull and Groton </td>
                 </tr>
             </table>
