--- a/views/includes/homepage_sections/ourLeagues.ejs
+++ b/views/includes/homepage_sections/ourLeagues.ejs
@@ -7,7 +7,7 @@
                 <h5 class="green-text bold">GDL</h5>
             </div>
             <div class="towns col s12 m8" style="margin-top: 50px;">
-                <table>
+                <!-- <table>
                     <tr>
                         <td class="bold">Massachusetts</td>
                         <td class="bold">Connecticut</td>
@@ -15,6 +15,45 @@
                     <tr>
                         <td>Marlborough, Taunton, Weston, Weymouth, Woburn, Newton, Ludlow, Southborough, Bridgewater, and Byfield</td>
                         <td>Rocky Hill, Windsor, North Branford, Trumbull and Groton </td>
+                    </tr>
+                </table> -->
+                <table class="townsTable">
+                    <tr class="head">
+                        <td>Massachusetts</td>
+                        <td>Connecticut</td>
+                    </tr>
+                    <tr class="images">
+                        <td>
+                            <img src="/images/leagues/logo-draft.png" alt="">
+                        </td>
+                        <td>
+                            <img src="/images/leagues/logo-draft.png" alt="">
+                        </td>
+                    </tr>
+                    <tr class="towns">
+                        <td>
+                            <ul>
+                                <li>Marlborough</li>
+                                <li>Taunton</li>
+                                <li>Weston</li>
+                                <li>Weymouth</li>
+                                <li>Woburn</li>
+                                <li>Newton</li>
+                                <li>Ludlow</li>
+                                <li>Southborough</li>
+                                <li>Bridgewater</li>
+                                <li>Byfield</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Rocky Hill</li>
+                                <li>Windsor</li>
+                                <li>North Branford</li>
+                                <li>Trumbull</li>
+                                <li>Groton</li>
+                            </ul>
+                        </td>
                     </tr>
                 </table>
             </div>
