deleted some images and added hybrid logo to twns table

--- a/views/includes/homepage_sections/ourLeagues.ejs
+++ b/views/includes/homepage_sections/ourLeagues.ejs
@@ -27,7 +27,7 @@
                             <img src="/images/leagues/logo-draft.png" alt="">
                         </td>
                         <td>
-                            <img src="/images/leagues/logo-draft.png" alt="">
+                            <img src="/images/leagues/hybrid.png" alt="">
                         </td>
                     </tr>
                     <tr class="towns">
