--- a/views/includes/general/contactUs.ejs
+++ b/views/includes/general/contactUs.ejs
@@ -1,26 +1,14 @@
 <div class="contactUs">
-    <!-- <div class="container">
-        <h4 class="center-align white-text typicalTitle" style="margin: 0;">Contact Us</h4>
-        <div class="social">
-            <a href="/joinus#contactform"><img class="social-icon" id="1" src="/images/social/email.png"></a>
-            <a href="https://www.facebook.com/Grassroots-Development-League-110113637449498/"><img class="social-icon" src="/images/social/facebook.png"></a>
-            <a><img class="social-icon" src="/images/social/twitter.png"></a>
-            <a href="https://www.instagram.com/gdlsoccer/"><img class="social-icon" src="/images/social/instagram.png"></a>
-        </div>
-    </div> -->
     <div class="footer">
         <p>Follow Us</p>
         <div class="row">
-            <div class="col s12 m6 l3">
-                <a href="/joinus#contactform"><img class="social-icon" id="1" src="/images/social/email.png"></a>
+            <div class="col s12 m6 l4">
+                <a href="mailto: info@gdlsoccer.com"><img class="social-icon" id="1" src="/images/social/email.png"></a>
             </div>
-            <div class="col s12 m6 l3">
-                <a><img class="social-icon" src="/images/social/facebook.png"></a>
+            <div class="col s12 m6 l4">
+                <a href="https://www.facebook.com/Grassroots-Development-League-110113637449498"><img class="social-icon" src="/images/social/facebook.png"></a>
             </div>
-            <div class="col s12 m6 l3">
-                <a><img class="social-icon" src="/images/social/twitter.png"></a>
-            </div>
-            <div class="col s12 m6 l3">
+            <div class="col s12 l4">
                 <a href="https://www.instagram.com/gdlsoccer/"><img class="social-icon" src="/images/social/instagram.png"></a>
             </div>
         </div>
