--- a/views/includes/joinus_sections/types.ejs
+++ b/views/includes/joinus_sections/types.ejs
@@ -90,7 +90,7 @@
             </tr>
         </table>
         <div class="row button" style="margin-top: 50px;">
-            <a class="btn tapinBtn" href="#contact_form">Apply Here</a>
+            <a class="btn tapinBtn" href="#contact_form">Register your Interest</a>
         </div>
     </div>
 </div>
