updated text in what we do cards

--- a/views/includes/homepage_sections/whatWeDo.ejs
+++ b/views/includes/homepage_sections/whatWeDo.ejs
@@ -5,19 +5,22 @@
             <%- include('../minis/whatWeDoCard', {
                 title: "Technology",
                 image: "technology.png",
-                text: "Unique, Best in Class Technology Platform",
+                text: "Unique, Personalized Digital Player Card for all Players",
+                text2: "Best in Class Technology Platform",
                 num: "one"
             }); %> 
             <%- include('../minis/whatWeDoCard', {
                 title: "Development",
                 image: "soccer.png",
-                text: "Player, Coach, and Parent Education Driven",
+                text: "Fun, Low Pressure Introduction to Organized Competition",
+                text2: "Small Sided, Conditioned and Free Play Games",
                 num: "two"
             }); %> 
             <%- include('../minis/whatWeDoCard', {
                 title: "Social Good",
                 image: "socialgood.png",
-                text: "Impacting Young Lives Throughout the World",
+                text: "Influencing Positive Social Change",
+                text2: "Impacting Young Lives Throughout the World",
                 num: "three"
             }); %> 
         </div>
