--- a/views/includes/minis/whatWeDoCard.ejs
+++ b/views/includes/minis/whatWeDoCard.ejs
@@ -4,6 +4,8 @@
             <img class="whatWeDo-logo" src="images/icons/<%= image %>">
             <span class="card-title white-text" style="font-weight: bold;"><%= title %></span>
             <p class="white-text  center-align"><%= text %></p>
+            <p class="white-text  center-align"><%= text2 %></p>
+
         </div>
     </div>
 </div>
