changed text on ourProgram

--- a/views/includes/homepage_sections/ourProgram.ejs
+++ b/views/includes/homepage_sections/ourProgram.ejs
@@ -13,17 +13,17 @@
             <%- include('../minis/ourProgramCard', {
                 title: "Revolutionary Technology",
                 image: "cellphone",
-                info: "Customized, Targeted, Development Focused Tools"
+                info: "Unique, Personalized Digital Player Card for all Players"
             }); %>
             <%- include('../minis/ourProgramCard', {
                 title: "Player Centric",
                 image: "soccerguy",
-                info: "Fun, Engaging, Safe, and Educational"
+                info: "Fun, Low Pressure Introduction to Organized Competition"
             }); %>
             <%- include('../minis/ourProgramCard', {
                 title: "Development Focused",
                 image: "computerguy",
-                info: "Built by Experienced Soccer Leaders/Educators"
+                info: "Small Sided, Conditioned and Free Play Games"
             }); %>
             <%- include('../minis/ourProgramCard', {
                 title: "Complimentary Program",
