digital player card section

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,6 +19,9 @@
         home: true
     }); %>
 
+    <!-- Stickers -->
+    <%- include('includes/leagues_sections/stickers'); %>
+
     <!-- Our Leagues Section -->
     <%- include('includes/homepage_sections/ourLeagues', {
         home: true
