--- a/views/includes/leagues_sections/stickers.ejs
+++ b/views/includes/leagues_sections/stickers.ejs
@@ -1,6 +1,8 @@
 <div class="stickers">
     <div class="container">
-        <h4 class="bold">Stickers</h4>
+        <h3 class="center-align typicalTitle">Digital Playercard</h3>
+        <p class="blurb">The most unique aspect of the GDL Program, is the amazing persoanlized digital player card that all players are provided with. These player cards will display developmentally appropriate, digital feedback as provided by the team coach. Players will be evaluated during each GDL festival by their coach, and will be awarded digital stickers after the event which will be visible and accessible on their very own electronic player card!
+        </p>
         <table style="table-layout: fixed;">
             <tr>
                 <td class="red">Hard Worker</td>
