--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -840,10 +840,16 @@ div.mapContainer {
     }
 }
 
-.joinUsInfo h3, .socialGood h3, .technology h3, .ourProgram h3, .ourStory h3, .palla h3 {
+.joinUsInfo h3, .socialGood h3, .technology h3, .ourProgram h3, .ourStory h3, .palla h3, .stickers h3 {
     font-size: 28px;
     font-weight: bolder;
     font-family: 'Roboto';
+}
+
+.stickers p.blurb {
+    font-size: 18px;
+    text-align: center;
+    margin-top: 50px;
 }
 
 .joinUsInfo form.col {
