--- a/views/includes/homepage_sections/ourLeagues.ejs
+++ b/views/includes/homepage_sections/ourLeagues.ejs
@@ -1,22 +1,74 @@
 <div class="ourLeagues <%= home ? ' grey lighten-4' : '' %>">
     <div class="container">
-        <h3 class="center-align typicalTitle">Our Programs</h3>
-        <div class="row">
-            <div class="league col s12 m4">
-                <img class="leaguesLogo" src="/images/leagues/logo-draft.png">
-                <h5 class="green-text bold">GDL</h5>
-            </div>
-            <div class="towns col s12 m8" style="margin-top: 50px;">
-                <!-- <table>
-                    <tr>
-                        <td class="bold">Massachusetts</td>
-                        <td class="bold">Connecticut</td>
-                    </tr>
-                    <tr>
-                        <td>Marlborough, Taunton, Weston, Weymouth, Woburn, Newton, Ludlow, Southborough, Bridgewater, and Byfield</td>
-                        <td>Rocky Hill, Windsor, North Branford, Trumbull and Groton </td>
-                    </tr>
-                </table> -->
+        <h3 class="center-align typicalTitle">Festival Locations</h3>
+        <div class="league">
+            <img class="leaguesLogo" src="/images/leagues/logo-draft.png">
+            <h5 class="green-text bold">GDL</h5>
+        </div>
+            
+        <table style="table-layout: fixed; margin-top:  50px;" class="optionsTable">
+            <tr class="grey lighten-1">
+                <td>Facilities</td>
+                <td></td>
+            </tr>
+            <tr class="grey lighten-5">
+                <td>
+                    <img src="/images/leagues/logo-draft.png">
+                </td>
+                <td>
+                    <p>The GDL is partnered with the very best facilities throighout New England, ensuring an elite experience for the players/teams that participate!</p>
+                </td>
+            </tr>
+            <tr class="grey lighten-1">
+                <td>Festival locations</td>
+                <td></td>
+            </tr>
+            <tr class="grey lighten-5">
+                <td>
+                    <img src="/images/leagues/logo-draft.png">
+                </td>
+                <td>
+                    <p>Site locations for GDL festivals will be determined based on the various geogrpahic bases of participating groups, with a high priority placed on convinience!
+                    </p>
+                </td>
+            </tr>
+            <!-- IDK why but  deleting this messes up the formatting  -->
+            <tr>
+            </tr>
+        </table>
+        <table style="table-layout: fixed; margin-top: 50px;" class="optionsTableMobile">
+            <tr class="grey lighten-1">
+                <td>Facilities</td>
+            </tr>
+            <tr class="grey lighten-5">
+                <td>
+                    <img src="/images/leagues/logo-draft.png">
+                </td>
+            </tr>
+            <tr class="grey lighten-3">
+                <td><p>The GDL is partnered with the very best facilities throighout New England, ensuring an elite experience for the players/teams that participate!
+                </p></td>
+            </tr>
+            <tr class="grey lighten-1">
+                <td>Festival Locations</td>
+            </tr>
+            <tr class="grey lighten-5">
+                <td>
+                    <img src="/images/leagues/logo-draft.png">
+                </td>
+            </tr>
+            <tr class="grey lighten-3">
+                <td>
+                    <p>Site locations for GDL festivals will be determined based on the various geogrpahic bases of participating groups, with a high priority placed on convinience!
+                    </p>
+                </td>
+            </tr>
+            <!-- IDK why but  deleting this messes up the formatting  -->
+            <tr>
+            </tr>
+        </table>
+
+        <!-- <div class="towns col s12 m8" style="margin-top: 50px;">
                 <table class="townsTable">
                     <tr class="head">
                         <td>Massachusetts</td>
@@ -56,7 +108,7 @@
                         </td>
                     </tr>
                 </table>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
