--- a/views/includes/homepage_sections/partners.ejs
+++ b/views/includes/homepage_sections/partners.ejs
@@ -2,11 +2,15 @@
     <div class="container">
         <h3 class="center-align typicalTitle">Partners</h3>
         <div class="row">
-            <div class="col s12 l6 partner-container">
+            <div class="col s12 l4 partner-container">
                 <img class="partners-logo" src="/images/leagues/tapin.png">
                 <a href="https://tapinmobilesolutions.com/" class="btn tapinBtn">Visit Tapin Site</a>
             </div>
-            <div class="col s12 l6 partner-container">
+            <div class="col s12 l4 partner-container">
+                <img class="partners-logo" src="/images/leagues/necsl.jpg">
+                <a href="https://www.thenecsl.com/" class="btn tapinBtn">Visit NECSL Site</a>
+            </div>
+            <div class="col s12 l4 partner-container">
                 <img class="partners-logo" src="/images/icons/palla.png">
                 <a href="https://www.pallasport.com/" class="btn tapinBtn">Visit Palla Site</a>
             </div>
