removed info and stickers from programs page

--- a/views/leagues.ejs
+++ b/views/leagues.ejs
@@ -17,10 +17,10 @@
     }); %>
 
     <!-- Info -->
-    <%- include('includes/leagues_sections/info'); %>
+    <!-- <%- include('includes/leagues_sections/info'); %> -->
 
     <!-- Stickers -->
-    <%- include('includes/leagues_sections/stickers'); %>
+    <!-- <%- include('includes/leagues_sections/stickers'); %> -->
 
     <!-- Contact Us -->
     <%- include('includes/general/contactUs'); %>
