--- a/views/leagues.ejs
+++ b/views/leagues.ejs
@@ -22,6 +22,9 @@
     <!-- Stickers -->
     <!-- <%- include('includes/leagues_sections/stickers'); %> -->
 
+     <!-- Cost -->
+     <%- include('includes/leaguelanding_sections/cost'); %>
+
     <!-- Contact Us -->
     <%- include('includes/general/contactUs'); %>
 
