--- a/views/leagues.ejs
+++ b/views/leagues.ejs
@@ -22,8 +22,17 @@
     <!-- Stickers -->
     <!-- <%- include('includes/leagues_sections/stickers'); %> -->
 
-     <!-- Cost -->
-     <%- include('includes/leaguelanding_sections/cost'); %>
+    <!-- Cost -->
+    <%- include('includes/leaguelanding_sections/cost'); %>
+
+    <!-- Who's it for -->
+    <%- include('includes/joinus_sections/types'); %>
+
+    <!-- What's included -->
+    <%- include('includes/joinus_sections/included'); %>
+
+    <!-- When -->
+    <%- include('includes/leaguelanding_sections/when'); %>
 
     <!-- Contact Us -->
     <%- include('includes/general/contactUs'); %>
