--- a/views/leagues.ejs
+++ b/views/leagues.ejs
@@ -31,6 +31,9 @@
     <!-- What's included -->
     <%- include('includes/joinus_sections/included'); %>
 
+    <!-- Where -->
+    <%- include('includes/leaguelanding_sections/where'); %> 
+
     <!-- When -->
     <%- include('includes/leaguelanding_sections/when'); %>
 
