--- a/views/includes/leaguelanding_sections/where.ejs
+++ b/views/includes/leaguelanding_sections/where.ejs
@@ -2,6 +2,6 @@
     <h3 class="bold">Where</h3>
     <hr>
     <div class="info where">
-        <img src="/images/<%= league %>.png"  alt="">
+        <img src="/images/states/new_england.png"  alt="">
     </div>
 </div>
