--- a/views/includes/leaguelanding_sections/when.ejs
+++ b/views/includes/leaguelanding_sections/when.ejs
@@ -2,6 +2,15 @@
     <h3 class="bold">When</h3>
     <hr>
     <p class="info">
-        Spring 2021
+        <table>
+            <tr>
+                <td class="grey lighten-1 bold">Festival 1</td>
+                <td class="grey lighten-5"><i>Provisionally</i> Saturday, May 1st, 2021</td>
+            </tr>
+            <tr>
+                <td class="grey lighten-1 bold">Festival 2</td>
+                <td class="grey lighten-5"><i>Provisionally</i> Saturday, June 12th, 2021</td>
+            </tr>
+        </table>
     </p>
 </div>
